--- a/4roomforum/Views/Reply/Index.cshtml
+++ b/4roomforum/Views/Reply/Index.cshtml
@@ -178,7 +178,7 @@
         <h5 class="text-info">Let's have a civilized discussion!</h5>
         <form id="replyForm" asp-controller="Reply" asp-action="Create" method="post" novalidate>
             <div class="mb-3">
-                <label for="replyContent" class="form-label text-primary"></label>
+                <label for="replyContent" class="form-label form-label1 text-primary"></label>
                 <textarea class="form-control" id="replyContent" name="ReplyContent" rows="3" placeholder="Write your reply here..." required></textarea>
                 <div class="invalid-feedback">
                     Please enter your reply!
