minor fix userProfile

--- a/4roomforum/Views/Login/Profile.cshtml
+++ b/4roomforum/Views/Login/Profile.cshtml
@@ -34,7 +34,7 @@
 
     
         <input asp-for="LastLogin" class="form-control" type="hidden" readonly />
-
+        <input asp-for="RoleId" class="form-control" type="hidden" readonly />
    
         <input asp-for="Status" class="form-control" type="hidden" readonly />
  
