--- a/4roomforum/Views/Admin/threads.cshtml
+++ b/4roomforum/Views/Admin/threads.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<_4roomforum.Models.Threads>
+﻿@model List<_4roomforum.DTOs.ThreadDTO>
 @{
     ViewData["Title"] = "Thread";
     Layout = "_AdminLayout";
