--- a/4roomforum/Views/Admin/Users/Index.cshtml
+++ b/4roomforum/Views/Admin/Users/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model List<_4roomforum.Models.User>
+﻿
 
 @{
     ViewData["Title"] = "User Management";
     Layout = "_AdminLayout";
+	var users = ViewBag.Users as IEnumerable<_4roomforum.DTOs.UserDTO>;
 }
 <h1>@ViewBag.Message</h1>
 <div class="container mt-5">
@@ -10,10 +11,16 @@
         <div class="col">
             <h2>User Management</h2>
         </div>
-        <div class="col text-end">
-            <a class="btn btn-primary" href="/AdminUsers/AddUser">Add User</a>
+        <div class="col">
+            <form asp-controller="AdminUsers" asp-action="Search" method="post">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search users" >
+					<button class="btn btn-primary" type="submit">Search</button>
+				</div>
+            </form>
         </div>
     </div>
+
 
     <div class="table-responsive">
         <table class="table table-striped table-bordered">
@@ -26,11 +33,11 @@
                     <th scope="col">RoleId</th>
                     <th scope="col">JoinDate</th>
                     <th scope="col">LastLogin</th>
-                    <th scope="col">Actions</th>
+                    @* <th scope="col">Actions</th> *@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var user in Model)
+                @foreach (var user in users)
                 {
                     <tr>
                         <th scope="row">@user.UserId</th>
@@ -40,10 +47,9 @@
                         <td>@user.RoleId</td>
                         <td>@user.JoinDate</td>
                         <td>@user.LastLogin</td>
-                        <td>
-                            <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#editUserModal">Edit</button>
-                            <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteUserModal">Delete</button>
-                        </td>
+                        @* <td> *@
+                        @*     <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#editUserModal">Edit</button> *@
+                        @* </td> *@
                     </tr>
                 }
             </tbody>
