update thread admin

--- a/4roomforum/Views/Admin/threads.cshtml
+++ b/4roomforum/Views/Admin/threads.cshtml
@@ -43,7 +43,7 @@
                         <td>@thread.IsPinned</td>
                         <td>@thread.IsClosed</td>
                         <td>
-                            <button class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="">Edit</button>
+                            <a class="btn btn-sm btn-warning" href="@Url.Action("UpdateThread", "AdminThreads", new { id = thread.ThreadId })">Edit</a>
                             <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="">Delete</button>
                         </td>
                     </tr>
